Bug 1036434 - In-content preferences doesn't show the complete scrollbar, r=gijs
UltraBlame original commit: 25da9ba50d8d04e78ef5e37415194b294c07c2c6

--- a/browser/themes/shared/incontentprefs/preferences.inc.css
+++ b/browser/themes/shared/incontentprefs/preferences.inc.css
@@ -153,6 +153,30 @@ Category
 List
 *
 /
+#
+categories
+{
+max
+-
+height
+:
+100vh
+;
+}
+#
+categories
+>
+scrollbox
+{
+overflow
+-
+x
+:
+hidden
+!
+important
+;
+}
 .
 category
 -
